# Luthier

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CODEOWNERS  LICENSE  README.md  kernel_dynstrt.txt  kernel_pht.txt  kernel_sht.txt  kernel_strt.txt  kernel_symbolt.txt  sibir.py  trampoline.h  vectoradd:1.hipv4-amdgcn-amd-amdhsa--gfx906
callback/: CMakeLists.txt  sibir_callback.cpp  sibir_callback.hpp
cmake/module/: CMakeLists.txt  LuthierAddIncludeDirs.cmake  LuthierAddPositionIndependence.cmake  LuthierHSA.cmake  LuthierLLVM.cmake
cmake/modules/: CMakeLists.txt  LuthierFetchLLVMSrc.cmake  LuthierFetchLLVMSrcIfNotGiven.cmake
compiler-plugins/: CMakeLists.txt  EmbedInstrumentationModuleBitcodePass.cpp  EmbedInstrumentationModuleBitcodePass.hpp  README.md  embed_optimized_bitcode_pass.cpp  embed_optimized_bitcode_pass.hpp
compiler-plugins/EmbedIModulePlugin/: CMakeLists.txt  EmbedInstrumentationModuleBitcodePass.cpp
compiler-plugins/cmake/: LuthierCompilerPluginsConfig.cmake.in
compiler-plugins/cmake/modules/: CMakeLists.txt  LuthierAddCompilerPlugin.cmake
compiler-plugins/include/LuthierCompilerPlugins/: IntrinsicCalls.h  LuthierConsts.h
compiler-plugins/include/luthier/: Consts.h  IntrinsicCalls.h
compiler-plugins/lib/: CMakeLists.txt
compiler-plugins/lib/EmbedIModulePlugin/: CMakeLists.txt  EmbedInstrumentationModuleBitcodePass.cpp
examples/CodeLifterDebugging/: CMakeLists.txt  CodeLifterDebugging.hip
examples/InstrCount/: CMakeLists.txt  InstrCount.hip
examples/KernelArgumentIntrinsic/: CMakeLists.txt  KernelArgumentIntrinsic.hip
examples/KernelInstrument/: CMakeLists.txt  KernelInstrument.hip
examples/LDSBankConflict/: CMakeLists.txt  LDSBankConflict.hip
examples/LiftLaunchedKernels/: CMakeLists.txt  LiftLaunchedKernels.hip
examples/OpcodeHistogram/: CMakeLists.txt  OpcodeHistogram.hip
examples/dump_elf_with_kd/: CMakeLists.txt  dump_elf.cpp  kernel_launch_intercept.cpp
examples/hello_world/: CMakeLists.txt  sibir_init_example.cpp
examples/hip_intercept/: CMakeLists.txt  hip_intercept.cpp
examples/hsa_executable_iterate/: CMakeLists.txt  hsa_executable_iterate.cpp
examples/intercept/: CMakeLists.txt  Makefile  intercept_hip.cpp  intercept_hsa.cpp  multithread_test.cpp
examples/iterate_all_executable_symbols/: CMakeLists.txt  iterate_all_executable_symbols.cpp
examples/kernel_instrument/: CMakeLists.txt  kernel_instrument.cpp  kernel_instrument.hip
examples/kernel_launch_intercept/: CMakeLists.txt  kernel_launch_intercept.cpp
luthier-tblgen/: CMakeLists.txt  Main.cpp  RealToPseudoOpcodeMapBackend.cpp  RealToPseudoOpcodeMapBackend.hpp  RealToPseudoRegisterMapBackend.cpp  RealToPseudoRegisterMapBackend.hpp
reproducer/: CMakeLists.txt  code_view.cpp  code_view.hpp  elf.cpp  elf.hpp  reproducer.cpp  vec-add.hsaco
sibir/: CMakeLists.txt  sibir.h  sibir_callback.cpp  sibir_callback.hpp
src/: CMakeLists.txt  Instr.cpp  amdgpu_elf.cpp  amdgpu_elf.hpp  amdgpu_kernel_code.hpp  cloning.cpp  cloning.hpp  code_generator.cpp  code_generator.hpp  code_lifter.cpp  code_lifter.hpp  code_object_manager.cpp  code_object_manager.hpp  code_object_manipulation.cpp  code_object_manipulation.hpp  code_view.cpp  code_view.hpp  context_manager.cpp  context_manager.hpp  controller.cpp  controller.hpp  disassembler.cpp  disassembler.hpp  dwarf_debug.cpp  dwarf_debug.hpp  elf.cc  elf.h  error.cpp  error.hpp  error_check.h  error_check.hpp  global_singleton_manager.cpp  global_singleton_manager.hpp  hip_arg_types.h  hip_compiler_intercept.cpp  hip_compiler_intercept.hpp  hip_intercept.cpp  hip_intercept.h  hip_intercept.hpp  hip_intercept_gen.py  (+67 more)
src/codegen/: machine_basic_block.hpp  machine_function.hpp  machine_instr.hpp  machine_mem_operand.hpp  pseudo_value_types.hpp  register.hpp  target_opcodes.hpp
src/disassembler/: assembler.cpp  bitops.cpp  disassembler.cpp  encodetable.cpp  encodetable.h  initialize.cpp  inst.cpp  inst.h  instprinter.h  operand.cpp  reg.cpp
src/include/comgr/: comgr.hpp
src/include/common/: Cloning.hpp  Error.hpp  IObjectCache.hpp  Interceptor.hpp  Lift.hpp  Log.hpp  ObjectUtils.hpp  ROCmLibraryApiInterceptor.hpp  Singleton.hpp  cloning.hpp  error.hpp  log.hpp  object_utils.hpp  singleton.hpp
src/include/hip/: HipCompilerApiInterceptor.hpp  HipCompilerApiTableInterceptor.hpp  HipRuntimeApiInterceptor.hpp  hip_compiler_intercept.hpp  hip_intercept.hpp  hip_platform.hpp  hip_runtime_intercept.hpp
src/include/hsa/: ApiTable.hpp  CodeObjectReader.hpp  CodeObjectReaderImpl.hpp  Executable.hpp  ExecutableBackedObjectsCache.hpp  ExecutableImpl.hpp  ExecutableSymbol.hpp  ExecutableSymbolImpl.hpp  GpuAgent.hpp  GpuAgentImpl.hpp  HandleType.hpp  HsaApiTableInterceptor.hpp  HsaRuntimeInterceptor.hpp  ISA.hpp  ISAImpl.hpp  LoadedCodeObject.hpp  LoadedCodeObjectDeviceFunctionImpl.hpp  LoadedCodeObjectImpl.hpp  LoadedCodeObjectKernelImpl.hpp  LoadedCodeObjectSymbolImpl.hpp  LoadedCodeObjectSymbolInteral.hpp  LoadedCodeObjectSymbolInternal.hpp  LoadedCodeObjectVariableImpl.hpp  ObjectCache.hpp  Type.hpp  hsa.hpp  hsa_agent.hpp  hsa_code_object_reader.hpp  hsa_executable.hpp  hsa_executable_symbol.hpp  hsa_handle_type.hpp  hsa_intercept.hpp  (+4 more)
src/lib/: CMakeLists.txt
src/scripts/: header_preprocessor.py  hsa_intercept_gen.py
src/sibir/: CMakeLists.txt  amdgpu_elf.hpp  code_object_manager.cpp  code_object_manager.h  disassembler.cpp  disassembler.h  error_check.h  hip_arg_types.h  hip_intercept.cpp  hip_intercept.h  hsa_intercept.cpp  hsa_intercept.h  sibir.h  sibir_hip_intercept_gen.py  sibir_impl.cpp  sibir_impl.hpp  sibir_instr.cpp  sibir_instr.h  sibir_meta.cpp  sibir_meta.hpp  sibir_types.h
src/test/: CMakeLists.txt
src/unit/: CMakeLists.txt
src_/lib/: CMakeLists.txt
src_old/disassembler/: CMakeLists.txt  assembler.h  bitops.h  disassembler.cpp  disassembler.h  elf.cc  initialize.h  inst.h  operand.h  reg.h
tests/: CMakeLists.txt  CodeLifterTest.cpp  code_lifter_test.cpp  comgr_test.cpp  main-hip-amdgcn-amd-amdhsa-gfx908.s
tests/include/: TestingUtils.h
tests/src/: CMakeLists.txt  TestingUtils.cpp
(+1187 files in other folders)
